# transcript-builder

./: .env.example  .gitignore  CLAUDE.md  CLAUDE.md.template  Dockerfile  README.md  alembic.ini  docker-compose.yml  generate_transcript.py  pyproject.toml  setup.sh
.claude/: settings.json
.claude/delegation/: __init__.py  quota.py  server.py
.claude/delegation/executors/: __init__.py  gemini.py  jules.py  perplexity.py  qwen.py
.claude/skills/: systematic-debug.md  tdd-loop.md  ui-debug.md
_scratch/: README.md
alembic/: env.py
alembic/versions/: 20241119_0001_initial_schema.py
data/: AP Datafile interpreter.md
planning/: README.md  STATUS.md
scripts/: audit_layout_safety.py  batch_generate.py  create_merged_grades.py  diagnose_ms_courses.py  diagnose_titles.py  export_seniors.py  generate_audit_samples.py  generate_enhanced_transcripts.py  generate_priority_6.py  regenerate_all_seniors_with_validation.py  regenerate_ap_award_students.py  screen_transcripts.py
src/: README.md  awards_calculator.py  class_rank_calculator.py  data_models.py  data_processor.py  decile_rank_calculator.py  gpa_calculator.py  gpa_calculator_merged.py  transcript_generator.py  transcript_generator_minimalist.py
templates/: styles_minimalist.css  styles_minimalist.css.session092.backup  transcript_minimalist.html  transcript_minimalist.html.session092.backup
tests/: README.md  __init__.py  conftest.py  test_gpa_validation.py  test_integration.py  test_v5_features.py
tests/api/: test_auth.py  test_health.py
tests/integration/: __init__.py  test_blackbaud_service.py  test_email_service.py
tests/unit/: test_gpa_calculator.py
